--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,65 +1,41 @@
-
-#user  nobody;
 worker_processes  1;
-
-#error_log  logs/error.log;
-#error_log  logs/error.log  notice;
-#error_log  logs/error.log  info;
-
-#pid        logs/nginx.pid;
-
 
 events {
     worker_connections  1024;
 }
 
-
 http {
+
     include       mime.types;
+
     default_type  application/octet-stream;
 	
-	# 反向代理配置
-	# upstream webservers { 
-	#	server 47.96.130.201:8080 weight=7;
-	# }
-
-    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-    #                  '$status $body_bytes_sent "$http_referer" '
-    #                  '"$http_user_agent" "$http_x_forwarded_for"';
-
-    #access_log  logs/access.log  main;
-
     sendfile        on;
-    #tcp_nopush     on;
 
-    #keepalive_timeout  0;
     keepalive_timeout  65;
-
-    #gzip  on;
 
     server {
         listen       80;
+
         server_name  localhost;
 		
 		# 开启gzip压缩
-		#gzip_static on;
 		gzip on;
+
 		gzip_min_length 1k;
+
 		gzip_buffers 4 16k;
+
 		#gzip_http_version 1.0;
+
 		gzip_comp_level 8;
+
 		gzip_types text/plain text/css application/xml text/javascript application/x-httpd-php image/jpeg image/gif image/png application/javascript;
+
 		gzip_vary off;
+
 		gzip_disable "MSIE [1-6]\.";
-
-	
-
-        #charset koi8-r;
-
-        #access_log  logs/host.access.log  main;
-
       
-       
         # 配置图片
         location  ~ .*\.(jpg|jpeg|gif|png|ico|css|js|pdf|txt|ico|ttf)$ {
             root  service/app/public;
@@ -72,7 +48,20 @@ http {
 			
 		}
 		
+		# mobile
+		location /mobile {
+			alias mobile;
+			index index.html index.htm;
+			
+		}
 		
+		# 淘口令
+		location /tao {
+			alias taobao;
+			index index.html index.htm;
+			
+		}
+
 		# 客户端
         location / {
             root  html;
@@ -83,74 +72,14 @@ http {
 			alias  admin;
 			index  index.html index.htm;
 		}
-        #error_page  404              /404.html;
-
-        # redirect server error pages to the static page /50x.html
-		
+      
         # 错误页
         error_page   404 500 502 503 504  /error.html;
         location = /error.html {
             root   html;
         }
 
-        # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-        #
-        #location ~ \.php$ {
-        #    proxy_pass   http://kaaden.orrzt.com;
-        #}
-
-        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-        #
-        #location ~ \.php$ {
-        #    root           html;
-        #    fastcgi_pass   127.0.0.1:9000;
-        #    fastcgi_index  index.php;
-        #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-        #    include        fastcgi_params;
-        #}
-
-        # deny access to .htaccess files, if Apache's document root
-        # concurs with nginx's one
-        #
-        #location ~ /\.ht {
-        #    deny  all;
-        #}
+    
     }
-
-
-    # another virtual host using mix of IP-, name-, and port-based configuration
-    #
-    #server {
-    #    listen       8000;
-    #    listen       somename:8080;
-    #    server_name  somename  alias  another.alias;
-
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
-
-
-    # HTTPS server
-    #
-    #server {
-    #    listen       443 ssl;
-    #    server_name  localhost;
-
-    #    ssl_certificate      cert.pem;
-    #    ssl_certificate_key  cert.key;
-
-    #    ssl_session_cache    shared:SSL:1m;
-    #    ssl_session_timeout  5m;
-
-    #    ssl_ciphers  HIGH:!aNULL:!MD5;
-    #    ssl_prefer_server_ciphers  on;
-
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
 
 }
